<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <DUT Name="ParallelUnitsSettings" Id="{be21b28a-d10a-4ec1-8077-12ca649c2986}">
    <Declaration><![CDATA[TYPE ParallelUnitsSettings :
STRUCT
	RemoteAmsId: STRING := '5.73.47.143.1.1';
	PressureSupplySP: REAL := 0; // Set Point for Master/Slave
	PressureExtractSP: REAL := 0; // Set Point for Master/Slave
	PressureSupplySP_HighSpeed: REAL := 0; // Set Point for Master/Slave
	PressureExtractSP_HighSpeed: REAL := 0; // Set Point for Master/Slave
	SupplyAirSetPointAdjustment: SetPointAdjustment := (
		Curve := (Y1 := 250, Y2 := 250, Y3 := 250, Y4 := 250, Y5 := 250, Y6 := 250, Y7 := 250, Y8 := 250, Y9 := 250) 
	);
	ExtractAirSetPointAdjustment: SetPointAdjustment := (
		Curve := (Y1 := 250, Y2 := 250, Y3 := 250, Y4 := 250, Y5 := 250, Y6 := 250, Y7 := 250, Y8 := 250, Y9 := 250) 
	);
	StandaloneMaxFan: REAL := 0.7; // Max fan speed for single unit
	DualMinFan: REAL := 0.4; // Min fan speed for dual units
	Kp: REAL := 1.5; // P
	fTn: TIME := T#4M; // I time
	fTv: TIME := T#0M; // D time
	RemoteOrder: RemoteOrder;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>