<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <DUT Name="AnalogOutputCalibrationParameters" Id="{89b33880-9fe6-448e-9399-d16e8014f449}">
    <Declaration><![CDATA[TYPE AnalogOutputCalibrationParameters :
STRUCT
	Output: LREAL;
	Gain: LREAL := 1.0;
	ManualControl: BOOL;
	InvertedOutput: BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>