<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <DUT Name="HeaterOutputDirections" Id="{7fb50990-64c7-432a-b0ca-7fbc7364b788}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE HeaterOutputDirections :
(
	IncreaseToHeat := 0, DecreaseToHeat
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>