<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <GVL Name="ExtraAlarmInputs" Id="{827668f3-1459-4b21-aa40-0e9296785766}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	AL01 AT %I*: BOOL;
	AL02 AT %I*: BOOL;
	AL03 AT %I*: BOOL;
	AL04 AT %I*: BOOL;
	AL05 AT %I*: BOOL;
	AL06 AT %I*: BOOL;
	AL07 AT %I*: BOOL;
	AL08 AT %I*: BOOL;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>